--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Distributed Systems/ds-practice-2025"]
 	path = Distributed Systems/ds-practice-2025
-	url = https://github.com/JuanGQCadavid/ds-practice-2025.git
+	url = git@github.com:JuanGQCadavid/ds-practice-2025.git
